2016-05-03  SilverNexus
	* main.c: Fixed the initial argument quantity check to account for the
	  flagless search string as a parameter.

2016-05-02  SilverNexus
	* parseArgs.c: Refactored the search string to not use a flag.
	  Updated the help message to convey the change in argument syntax.
	  Current design should allow for it to still be inserted between option flags.
	* README: Updated the usage information to relect the adjusted argument syntax.
	* doc/fileperuser.man: Created man page for fileperuser.
	* doc/Makefile.am: Set up for a makefile to install the manpage.
	* Makefile.am: Indicate that doc has another Makefile.am in it.
	* configure.ac: Make sure that doc/Makefile is produced.

2016-05-01  SilverNexus
	* ErrorLog.c: Changed the month and error titles to be const char * const
	  instead of const char *. This allows for slightly more aggressive optimization.
	* fileperuser_search.c: Remove parameter pass of jump table in favor of direct
	  access from jump_table.h.
	  Also removed extraneous check from case insensitive search.
	* fileperuser_search.h: Remove jump table parameter from the function prototypes.
	* search.c: Don't pass the jump table anymore, either.
	* settings.h: Don't have the function pointer use the jump table parameter slot.

2016-04-30  SilverNexus
	* jump_table.c: Changed the jump table to be stack allocated.
	  Removed implementation of initialization and cleanup, since no longer
	  dynamically allocated.
	* jump_table.h: Changed the extern declaration to match the new jump table.
	  Removed prototypes for initialization and cleanup of jump table.
	* main.c: Removed calls to initialization and cleanup of jump table.

2016-01-28  SilverNexus
	* search.c: Preprocess out some info-level calls to log_event. The usually aren't needed,
	  and add a bit of overhead to directory parsing.

2016-01-26  SilverNexus
	* search.c: Revert back to strstr when done parsing a file with fileperuser_memmem.